--- a/views/myOrders.ejs
+++ b/views/myOrders.ejs
@@ -48,12 +48,17 @@
         }
         
         #demo {
-            background-image: url(bg_img.jpg);
+            background-image: url(images/bg_img.jpg);
             background-position: center;
             background-attachment: fixed;
             background-repeat: no-repeat;
             background-size: cover;
             min-height: 570px;
+        }
+        
+        #content {
+            backdrop-filter: blur(10px);
+            min-height: 500px;
         }
         
         button {
@@ -93,7 +98,9 @@
     </div>
     <br><br><br>
     <div>
-        <div id="demo"></div>
+        <div id="demo">
+            <div id="content"></div>
+        </div>
     </div>
 </body>
 
@@ -122,10 +129,10 @@
                     resData.data.result.data[i].order_items[0].quantity + "</p>" + '<p> Status : ' + resData.data.result.data[i].status + '</p>' +
                     '<p>Payment Status : ' + resData.data.result.data[i].payment_status + '</p>' + '</div>' + '</div>' + '</span>'
             }
-            document.getElementById("demo").innerHTML = text;
+            document.getElementById("content").innerHTML = text;
         } else {
             let text = '<img src="f.jpg" width=100% height=605px padding=2px>';
-            document.getElementById("demo").innerHTML = text;
+            document.getElementById("content").innerHTML = text;
         }
     }
 
