--- a/views/myOrders.ejs
+++ b/views/myOrders.ejs
@@ -131,7 +131,7 @@
             }
             document.getElementById("content").innerHTML = text;
         } else {
-            let text = '<img src="f.jpg" width=100% height=605px padding=2px>';
+            let text = '<img src="images/f.jpg" width=100% height=605px padding=2px>';
             document.getElementById("content").innerHTML = text;
         }
     }
