--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -67,20 +67,30 @@
             color: white;
             padding-top: 5px;
             padding: 15px;
-            border: 3px solid white;
+            border: 0px solid white;
             border-radius: 10px;
             font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
             font-size: large;
+            margin: 5px;
+            width: 97%;
+            transition: transform 250ms;
         }
         
         button:hover {
-            background-color: red;
+            background-color: rgb(255, 30, 0);
             color: #111;
             box-shadow: 0px 10px 8px black;
             border: 0px;
             align-items: center;
             margin: 5px;
             width: 97%;
+            transform: translateY(-5px);
+            cursor: pointer;
+        }
+        
+        button:active {
+            background-color: black;
+            color: white;
         }
         
         #navbar {
@@ -178,7 +188,7 @@
             document.getElementById("content").innerHTML = text;
             
         } else {
-            let text = '<img src="f.jpg" width=100% height=605px padding=2px>';
+            let text = '<img src="images/f.jpg" width=100% height=605px padding=2px>';
             document.getElementById("content").innerHTML = text;
         }
     }
