--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,57 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: #474e5d;
+            padding-top: 50px;
+        }
+        
+        .modal-content {
+            background-color: #fefefe;
+            margin: 5% auto 15% auto;
+            padding: 10px;
+            border: 1px solid #888;
+            width: 30%;
+            text-align: center;
+            font-weight: bold;
+            font-size: x-large;
+        }
+        
+        hr {
+            border: 1px solid #f1f1f1;
+            margin-bottom: 25px;
+        }
+        
+        .close {
+            position: absolute;
+            right: 35px;
+            top: 15px;
+            font-size: 40px;
+            font-weight: bold;
+            color: #f1f1f1;
+        }
+        
+        .close:hover,
+        .close:focus {
+            color: #f44336;
+            cursor: pointer;
+        }
+        /* Clear floats */
+        
+        .clearfix::after {
+            content: "";
+            clear: both;
+            display: table;
+        }
+        
         ul {
             list-style-type: none;
             margin: 0;
@@ -66,20 +117,30 @@
             color: white;
             padding-top: 5px;
             padding: 15px;
-            border: 3px solid white;
+            border: 0px solid white;
             border-radius: 10px;
             font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
             font-size: large;
+            transition: transform 250ms;
+            margin: 5px;
+            width: 97%;
         }
         
         button:hover {
-            background-color: green;
+            background-color: rgb(137, 255, 2);
             color: #111;
             box-shadow: 0px 10px 8px black;
             border: 0px;
             align-items: center;
             margin: 5px;
             width: 97%;
+            transform: translateY(-5px);
+            cursor: pointer;
+        }
+        
+        button:active {
+            background-color: black;
+            color: white;
         }
         
         #navbar {
@@ -112,8 +173,20 @@
             <div id="content"></div>
         </div>
     </div>
+    <div id="id01" class="modal" style="background-color: transparent;backdrop-filter: blur(10px);">
+        <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+        <div class="modal-content">
+            Added to <i class="fa fa-shopping-cart" style="font-size:24px;"></i>&nbsp;<i class="fa fa-check" style="font-size:24px;color: green;"></i>
+        </div>
+    </div>
 </body>
 <script>
+    var modal = document.getElementById('id01');
+    window.onclick = function(event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
     async function main() {
         var token = sessionStorage.getItem('token')
         let result = await fetch("/viewProduct", {
@@ -124,7 +197,6 @@
             },
         });
         let resData = await result.json();
-        console.log(resData.data);
 
         if (resData.status == 200) {
             let text = "";
@@ -138,7 +210,7 @@
             }
             document.getElementById("content").innerHTML = text;
         } else {
-            let text = '<img src="f.jpg" width=100% height=605px padding=2px>';
+            let text = '<img src="images/f.jpg" width=100% height=605px padding=2px>';
             document.getElementById("content").innerHTML = text;
         }
     }
@@ -149,6 +221,7 @@
             alert("Quantity should be less than 5 and more than 0")
             main()
         } else {
+            document.getElementById('id01').style.display = 'block'
             sessionStorage.setItem(`id_${id}`, id)
             sessionStorage.setItem(`name_${id}`, name)
             sessionStorage.setItem(`price_${id}`, price)
