--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -66,11 +66,14 @@
             background-color: black;
             color: white;
             padding-top: 5px;
-            padding: 5px;
+            padding: 15px;
+            border: 0px solid white;
+            border-radius: 10px;
             font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
             font-size: large;
-            border-radius: 10px;
-            border: 3px solid white;
+            transition: transform 250ms;
+            margin: 5px;
+            width: 97%;
         }
         
         button[disabled] {
@@ -78,7 +81,15 @@
         }
         
         button:hover[enabled] {
-            background-color: green;
+            background-color: rgb(137, 255, 2);
+            color: #111;
+            box-shadow: 0px 10px 8px black;
+            border: 0px;
+            align-items: center;
+            margin: 5px;
+            width: 97%;
+            transform: translateY(-5px);
+            cursor: pointer;
         }
         
         #navbar {
