--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,235 +1,283 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: #474e5d;
-            padding-top: 50px;
-        }
-        
-        .modal-content {
-            background-color: #fefefe;
-            margin: 5% auto 15% auto;
-            padding: 10px;
-            border: 1px solid #888;
-            width: 30%;
-            text-align: center;
-            font-weight: bold;
-            font-size: x-large;
-        }
-        
-        hr {
-            border: 1px solid #f1f1f1;
-            margin-bottom: 25px;
-        }
-        
-        .close {
-            position: absolute;
-            right: 35px;
-            top: 15px;
-            font-size: 40px;
-            font-weight: bold;
-            color: #f1f1f1;
-        }
-        
-        .close:hover,
-        .close:focus {
-            color: #f44336;
-            cursor: pointer;
-        }
-        /* Clear floats */
-        
-        .clearfix::after {
-            content: "";
-            clear: both;
-            display: table;
-        }
-        
-        ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            background-color: #333;
-        }
-        
-        li {
-            float: left;
-            font-size: large;
-        }
-        
-        li a {
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-        
-        li a:hover {
-            background-color: #111;
-        }
-        
-        .card {
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-            transition: 0.3s;
-            width: 23%;
-            display: inline-block;
-            margin: 1%;
-            background-color: white;
-            border-radius: 10px;
-        }
-        
-        .card:hover {
-            box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-        }
-        
-        .container {
-            padding: 2px 16px;
-        }
-        
-        #demo {
-            background-image: url(images/bg_img.jpg);
-            background-position: center;
-            background-attachment: fixed;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-        
-        #content {
-            backdrop-filter: blur(10px);
-            min-height: 500px;
-        }
-        
-        button {
-            background-color: black;
-            color: white;
-            padding-top: 5px;
-            padding: 15px;
-            border: 0px solid white;
-            border-radius: 10px;
-            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-            font-size: large;
-            transition: transform 250ms;
-            margin: 5px;
-            width: 97%;
-        }
-        
-        button:hover {
-            background-color: rgb(137, 255, 2);
-            color: #111;
-            box-shadow: 0px 10px 8px black;
-            border: 0px;
-            align-items: center;
-            margin: 5px;
-            width: 97%;
-            transform: translateY(-5px);
-            cursor: pointer;
-        }
-        
-        button:active {
-            background-color: black;
-            color: white;
-        }
-        
-        #navbar {
-            text-align: center;
-            color: aliceblue;
-            font-size: x-large;
-            position: fixed;
-            width: 100%;
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            background-color: #333;
-        }
+      .modal {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: #474e5d;
+        padding-top: 50px;
+      }
+
+      .modal-content {
+        background-color: #fefefe;
+        margin: 5% auto 15% auto;
+        padding: 10px;
+        border: 1px solid #888;
+        width: 30%;
+        text-align: center;
+        font-weight: bold;
+        font-size: x-large;
+      }
+
+      hr {
+        border: 1px solid #f1f1f1;
+        margin-bottom: 25px;
+      }
+
+      .close {
+        position: absolute;
+        right: 35px;
+        top: 15px;
+        font-size: 40px;
+        font-weight: bold;
+        color: #f1f1f1;
+      }
+
+      .close:hover,
+      .close:focus {
+        color: #f44336;
+        cursor: pointer;
+      }
+      /* Clear floats */
+
+      .clearfix::after {
+        content: "";
+        clear: both;
+        display: table;
+      }
+
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #333;
+      }
+
+      li {
+        float: left;
+        font-size: large;
+      }
+
+      li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+
+      li a:hover {
+        background-color: #111;
+      }
+
+      .card {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        transition: 0.3s;
+        width: 100%;
+        display: inline-block;
+        background-color: white;
+      }
+
+      .borderTop {
+        border-top: 1px solid rgb(212, 208, 208);
+        left: 20px;
+        right: 20px;
+      }
+
+      .container {
+        padding: 2px 16px;
+      }
+
+      #demo {
+        background-image: url(images/bg_img.jpg);
+        background-position: center;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+
+      #content {
+        backdrop-filter: blur(10px);
+        min-height: 500px;
+      }
+
+      button {
+        background-color: black;
+        color: white;
+        padding-top: 5px;
+        padding: 15px;
+        border: 0px solid white;
+        border-radius: 10px;
+        font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+        font-size: large;
+        transition: transform ease 400ms;
+        margin: 5px;
+        width: 99.3%;
+        margin-bottom: 1%;
+      }
+
+      button:hover {
+        background-color: rgb(137, 255, 2);
+        color: #111;
+        box-shadow: 0px 10px 8px black;
+        border: 0px;
+        align-items: center;
+        margin: 5px;
+        width: 99.3%;
+        transform: translateY(-5px);
+        cursor: pointer;
+        margin-bottom: 1%;
+      }
+
+      button:active {
+        background-color: black;
+        color: white;
+      }
+
+      #navbar {
+        text-align: center;
+        color: aliceblue;
+        font-size: x-large;
+        position: fixed;
+        width: 100%;
+        font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+        background-color: #333;
+        z-index: 1;
+      }
+
+      .quantity {
+        border: none;
+        width: 25px;
+      }
+
+      .quantity:focus {
+        outline: none;
+      }
     </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
 
-<body style="margin: 0;">
+  <body style="margin: 0">
     <div id="navbar">
-        <ul>
-            <li><a class="active" href="http://localhost:3000/myOrders">My Orders</a></li>
-            <li>
-                <a class="active" href="http://localhost:3000/myCart">Cart <i class="fa fa-shopping-cart" style="font-size:24px"></i></a>
-            </li>
-            <div style="padding-top: 15px;padding: 10px;">Products</div>
-        </ul>
-
+      <ul>
+        <li>
+          <a class="active" href="http://localhost:3000/myOrders">My Orders</a>
+        </li>
+        <li>
+          <a class="active" href="http://localhost:3000/myCart"
+            >Cart <i class="fa fa-shopping-cart" style="font-size: 24px"></i
+          ></a>
+        </li>
+        <div style="padding-top: 15px; padding: 10px">Products</div>
+      </ul>
     </div>
-    <br><br><br>
+    <br /><br /><br />
     <div>
-        <div id="demo">
-            <div id="content"></div>
-        </div>
+      <div id="demo">
+        <div id="content"></div>
+      </div>
     </div>
-    <div id="id01" class="modal" style="background-color: transparent;backdrop-filter: blur(10px);">
-        <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-        <div class="modal-content">
-            Added to <i class="fa fa-shopping-cart" style="font-size:24px;"></i>&nbsp;<i class="fa fa-check" style="font-size:24px;color: green;"></i>
-        </div>
+    <div
+      id="id01"
+      class="modal"
+      style="background-color: transparent; backdrop-filter: blur(10px)"
+    >
+      <span
+        onclick="document.getElementById('id01').style.display='none'"
+        class="close"
+        title="Close Modal"
+        >&times;</span
+      >
+      <div class="modal-content">
+        Added to
+        <i class="fa fa-shopping-cart" style="font-size: 24px"></i>&nbsp;<i
+          class="fa fa-check"
+          style="font-size: 24px; color: green"
+        ></i>
+      </div>
     </div>
-</body>
-<script>
-    var modal = document.getElementById('id01');
-    window.onclick = function(event) {
-        if (event.target == modal) {
-            modal.style.display = "none";
-        }
-    }
+  </body>
+  <script>
+    var modal = document.getElementById("id01");
+    window.onclick = function (event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    };
     async function main() {
-        var token = sessionStorage.getItem('token')
-        let result = await fetch("/viewProduct", {
-            method: 'GET',
-            headers: {
-                "Content-type": "application/json",
-                "Authorization": "Bearer " + token
-            },
-        });
-        let resData = await result.json();
+      var token = sessionStorage.getItem("token");
+      let result = await fetch("/viewProduct", {
+        method: "GET",
+        headers: {
+          "Content-type": "application/json",
+          Authorization: "Bearer " + token,
+        },
+      });
+      let resData = await result.json();
 
-        if (resData.status == 200) {
-            let text = "";
-            for (let i = 0; i < resData.data.length; i++) {
-
-                text += '<span>' + '<div class="card">' + '<div class="container">' + "<h4><b>" +
-                    resData.data[i].name + "</b></h4>" + "<p> Price : Rs." + resData.data[i].price + "</p>" + "<p> Category : " + resData.data[i].product_category.category +
-                    "</p>" + "<p> Stock : " + resData.data[i].product_inventory.stock + "</p>" + `<p>Quantity : <input type="number" id="quantity${i}" name="quantity${i}" value="1" min="1" max="5"></p>` + '</div>' +
-                    `<button type="submit" id="btn${i}" onclick="addToCart('${resData.data[i].id}','${resData.data[i].name}','${resData.data[i].price}','${resData.data[i].product_category.category}','${i}')">` + '<b>Add Product to Cart</b>' + "</button>" +
-                    '</div>' + '</span>'
-            }
-            document.getElementById("content").innerHTML = text;
-        } else {
-            let text = '<img src="images/f.jpg" width=100% height=605px padding=2px>';
-            document.getElementById("content").innerHTML = text;
+      if (resData.status == 200) {
+        let text = "";
+        for (let i = 0; i < resData.data.length; i++) {
+          text +=
+            "<span>" +
+            '<div class="card borderTop">' +
+            '<div class="container">' +
+            "<h4><b>" +
+            resData.data[i].name +
+            "</b></h4>" +
+            "<p> Price : Rs." +
+            resData.data[i].price +
+            "</p>" +
+            "<p> Category : " +
+            resData.data[i].product_category.category +
+            "</p>" +
+            "<p> Stock : " +
+            resData.data[i].product_inventory.stock +
+            "</p>" +
+            `<p>Quantity : <input type="number" id="quantity${i}" name="quantity${i}" value="1" min="1" max="5" class="quantity"></p>` +
+            "</div>" +
+            `<button type="submit" id="btn${i}" onclick="addToCart('${resData.data[i].id}','${resData.data[i].name}','${resData.data[i].price}','${resData.data[i].product_category.category}','${i}')">` +
+            "<b>Add Product to Cart</b>" +
+            "</button>" +
+            "</div>" +
+            "</span>";
         }
+        document.getElementById("content").innerHTML = text;
+      } else {
+        let text =
+          '<img src="images/f.jpg" width=100% height=605px padding=2px>';
+        document.getElementById("content").innerHTML = text;
+      }
     }
 
     async function addToCart(id, name, price, category, ui) {
-        var quantity = document.getElementById(`quantity${ui}`).value
-        if (quantity > 5 || quantity < 1) {
-            alert("Quantity should be less than 5 and more than 0")
-            main()
-        } else {
-            document.getElementById('id01').style.display = 'block'
-            sessionStorage.setItem(`id_${id}`, id)
-            sessionStorage.setItem(`name_${id}`, name)
-            sessionStorage.setItem(`price_${id}`, price)
-            sessionStorage.setItem(`category_${id}`, category)
-            sessionStorage.setItem(`quantity_${id}`, quantity)
-        }
+      var quantity = document.getElementById(`quantity${ui}`).value;
+      if (quantity > 5 || quantity < 1) {
+        alert("Quantity should be less than 5 and more than 0");
+        main();
+      } else {
+        document.getElementById("id01").style.display = "block";
+        sessionStorage.setItem(`id_${id}`, id);
+        sessionStorage.setItem(`name_${id}`, name);
+        sessionStorage.setItem(`price_${id}`, price);
+        sessionStorage.setItem(`category_${id}`, category);
+        sessionStorage.setItem(`quantity_${id}`, quantity);
+      }
     }
 
     main();
-</script>
-
+  </script>
 </html>
