--- a/views/myOrders.ejs
+++ b/views/myOrders.ejs
@@ -53,12 +53,12 @@
             background-attachment: fixed;
             background-repeat: no-repeat;
             background-size: cover;
-            min-height: 570px;
+            min-height: 562.5px;
         }
         
         #content {
             backdrop-filter: blur(10px);
-            min-height: 500px;
+            min-height: 562.5px;
         }
         
         button {
@@ -85,14 +85,15 @@
             width: 100%;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             background-color: #333;
+            z-index: 1;
         }
     </style>
 </head>
 
 <body style="margin: 0;">
-    <div id="navbar">
+    <div id="navbar"> 
         <ul>
-            <li><a class="active" href="http://localhost:3000/products">Products</a></li>
+              <li><a class="active" href="http://localhost:3000/products">Products</a></li>
             <div style="padding-top: 15px;padding: 10px;">My Orders</div>
         </ul>
     </div>
